packages/related/test/tests/test_plan_execution/logs/snapshots/node/jsenv_tests_output_error_in_test_indirect.txt
------------ 1 execution to run -------------
node (node_worker_thread@<mock>)
---------------------------------------------

✖ error_in_test_indirect.spec.js [<mock>/<mock>] 1/1 (all failed)
--------------- error ----------------
1 | const getCircle = () => {
2 |   throw new Error("circle");
            ^
Error: circle
  at getCircle (<mock>/error_in_test_indirect.spec.js:2:9)
  at <mock>/error_in_test_indirect.spec.js:5:1
--------------------------------------

------------------ summary ------------------
1 execution: all failed
duration: <mock>
---------------------------------------------